--- a/css/place.css
+++ b/css/place.css
@@ -41,13 +41,7 @@
 }
 
 .topBox header .logo {
-  width: 13rem;
-}
-
-@media only screen and (max-width: 1440px) {
-  .topBox header .logo {
-    width: 9.1rem;
-  }
+  width: 9rem;
 }
 
 .topBox header nav {
@@ -120,6 +114,10 @@
 
 .topBox .slogan .sloganPic {
   width: 34.5rem;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: flyLeftAnimate .5s ease-in-out 1 forwards;
   -moz-animation: flyLeftAnimate .5s ease-in-out 1 forwards;
   -o-animation: flyLeftAnimate .5s ease-in-out 1 forwards;
@@ -131,6 +129,10 @@
   margin-top: 30%;
   font-size: 2.5rem;
   color: #fff;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: flyLeftAnimate .8s ease-in-out 1 forwards;
   -moz-animation: flyLeftAnimate .8s ease-in-out 1 forwards;
   -o-animation: flyLeftAnimate .8s ease-in-out 1 forwards;
@@ -140,9 +142,13 @@
 
 .topBox .slogan .strip {
   width: 18rem;
-  height: 0.83rem;
-  margin-top: 10%;
+  height: 0.5rem;
+  margin-top: 20%;
   background-color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: flyLeftAnimate 1s ease-in-out 1 forwards;
   -moz-animation: flyLeftAnimate 1s ease-in-out 1 forwards;
   -o-animation: flyLeftAnimate 1s ease-in-out 1 forwards;
@@ -159,7 +165,7 @@
   }
   .topBox .slogan .strip {
     width: 12.5rem;
-    height: 0.5rem;
+    height: 0.3rem;
   }
 }
 
@@ -210,7 +216,6 @@
 
 .daily .dailyPic ul {
   position: absolute;
-  /*left: 0;*/
   width: 200rem;
 }
 
@@ -245,11 +250,11 @@
 }
 
 .daily .daily-slideBtn .prev {
-  background-position: 5px top;
+  background-position: 10px 5px;
 }
 
 .daily .daily-slideBtn .next {
-  background-position: -28px top;
+  background-position: -25px 5px;
 }
 
 .daily .daily-slideBtn .active {
@@ -541,8 +546,9 @@
 }
 
 .typeList {
-  width: 90%;
-  margin: 0 5%;
+  width: 117rem;
+  min-width: 100rem;
+  margin: 0 auto;
 }
 
 
@@ -551,15 +557,23 @@
 .typeList .typeList-title {
   position: relative;
   float: left;
-  width: 10%;
+  width: 12rem;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   opacity: 0;
 }
 
 .typeList .typeList-title h2 {
   width: 3.2rem;
-  font-size: 3.2rem;
+  font-size: 2.4rem;
   line-height: 1.3;
   color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .typeList .typeList-title span {
@@ -571,21 +585,31 @@
 
 .typeList .typeList-title span i {
   display: block;
-  width: 3.2rem;
-  height: 4px;
+  width: 2.4rem;
+  height: 0.33rem;
+  margin-top: 0.5rem;
   background-color: #fbd34b;
-  margin-top: 6px;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 @media only screen and (max-width: 1440px) {
+  .typeList {
+    width: 90%;
+  }
+  .typeList .typeList-title {
+    width: 5rem;
+  }
   .typeList .typeList-title h2 {
     width: 2rem;
     font-size: 2rem;
   }
   .typeList .typeList-title span i {
     width: 2rem;
-    height: 2px;
-    margin-top: 4px;
+    height: 0.17rem;
+    margin-top: 0.33rem;
   }
 }
 
@@ -594,13 +618,13 @@
 
 .typeList .colList {
   float: right;
-  width: 90%;
+  width: 105rem;
   opacity: 0;
 }
 
 .typeList .colList .left {
   float: left;
-  margin-left: 3%;
+  margin-left: 2rem;
   margin-bottom: 5rem;
 }
 
@@ -610,8 +634,8 @@
 
 .typeList .colList .product {
   position: relative;
-  width: 60rem;
-  height: 33.3rem;
+  width: 50rem;
+  height: 26rem;
 }
 
 .typeList .colList .product .productPic {
@@ -645,6 +669,7 @@
 .typeList .colList .product .product-content h3 {
   margin: 5px 0 15px;
   font-size: 20px;
+  /*font-size: 14px;*/
   line-height: 3;
   color: #fff;
 }
@@ -673,6 +698,9 @@
 }
 
 @media only screen and (max-width: 1440px) {
+  .typeList .colList {
+    width: 100rem;
+  }
   .typeList .colList .product {
     width: 42rem;
     height: 23.3rem;
@@ -1321,7 +1349,6 @@ footer .info .info-nr p {
 
 .detailInfo .detailInfoText> li span {
   float: left;
-  /*display: inline-block;*/
   width: 15%;
   margin-right: 5%;
   text-align: right;
@@ -1607,21 +1634,25 @@ footer .info .info-nr p {
   left: 50%;
   z-index: 11;
   width: 34.4rem;
-  opacity: 0;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: scaleDown .5s ease-in-out .2s 1 forwards;
   -moz-animation: scaleDown .5s ease-in-out .2s 1 forwards;
   -o-animation: scaleDown .5s ease-in-out .2s 1 forwards;
   animation: scaleDown .5s ease-in-out .2s 1 forwards;
+  opacity: 0;
 }
 
 .topBox .aboutTop-bigSlogan span {
   display: block;
   position: absolute;
   top: -1rem;
-  left: 6rem;
+  left: 9rem;
   z-index: -1;
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 3rem;
+  height: 3rem;
   background-color: #fbd34b;
 }
 
@@ -1631,6 +1662,10 @@ footer .info .info-nr p {
   left: 5%;
   font-size: 2.5rem;
   color: #fff;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: flyRightAnimate .7s ease-in-out 1 forwards;
   -moz-animation: flyRightAnimate .7s ease-in-out 1 forwards;
   -o-animation: flyRightAnimate .7s ease-in-out 1 forwards;
@@ -1644,6 +1679,10 @@ footer .info .info-nr p {
   right: 5%;
   font-size: 2.5rem;
   color: #fff;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -webkit-animation: flyLeftAnimate .7s ease-in-out 1 forwards;
   -moz-animation: flyLeftAnimate .7s ease-in-out 1 forwards;
   -o-animation: flyLeftAnimate .7s ease-in-out 1 forwards;
@@ -1675,6 +1714,12 @@ footer .info .info-nr p {
   .topBox .aboutTop-bigSlogan {
     width: 24.1rem;
   }
+  .topBox .aboutTop-bigSlogan span {
+    top: -1rem;
+    left: 6rem;
+    width: 2.5rem;
+    height: 2.5rem;
+  }
   .topBox .aboutTop-leftSlogan {
     width: 8rem;
   }
@@ -1705,11 +1750,15 @@ footer .info .info-nr p {
   font-size: 4rem;
   color: #fff;
   text-align: center;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .about-container .aboutus .aboutus-content {
   position: relative;
-  height: 45.7rem;
+  height: 42rem;
 }
 
 .about-container .aboutus img {
@@ -1717,7 +1766,11 @@ footer .info .info-nr p {
   top: .5rem;
   left: 0;
   z-index: 10;
-  width: 68.5rem;
+  width: 60rem;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   opacity: 0;
 }
 
@@ -1726,9 +1779,13 @@ footer .info .info-nr p {
   right: 0;
   top: 0;
   z-index: 9;
-  width: 54.75rem;
-  height: 45.7rem;
+  width: 50rem;
+  height: 40rem;
   background-color: #fbd34d;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   opacity: 0;
 }
 
@@ -1748,27 +1805,43 @@ footer .info .info-nr p {
   width: 40px;
   height: 2px;
   background-color: #010818;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .aboutus-info .aboutus-info-text p {
   font-size: 14px;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   text-align: justify;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .about-container .contactus img {
   float: right;
   width: 45%;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   opacity: 0;
 }
 
 .about-container .contactus .contactus-info {
   float: left;
   width: 55%;
-  height: 45.7rem;
+  height: 33rem;
   margin-top: 3rem;
   background-color: #0e1c3d;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   opacity: 0;
 }
 
@@ -1834,6 +1907,10 @@ footer .info .info-nr p {
   .about-container section h2 {
     font-size: 2.8rem;
   }
+  .aboutus-info .aboutus-info-text .line,
+  .aboutus-info .aboutus-info-text p {
+    margin-bottom: 15px;
+  }
   .about-container .aboutus .aboutus-content {
     height: 32rem;
   }
@@ -1843,6 +1920,9 @@ footer .info .info-nr p {
   .about-container .aboutus .aboutus-info {
     width: 45rem;
     height: 33rem;
+  }
+  .about-container .contactus img {
+    width: 45%;
   }
   .about-container .contactus .contactus-info {
     height: 25rem;
