--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,8 @@
   float: left;
   width: 200px;
   height: 300px;
-  margin-right: 20px;
+  margin: 0 10px;
+  background-color: #3a5977;
   border: 3px solid #3a5977;
   box-shadow: 0 0 20px rgba(0, 0, 0, .7);
   cursor: pointer;
@@ -238,7 +239,7 @@
   width: 100px;
   height: 26px;
   margin: 30px auto 0;
-  border: 1px solid #fff;
+  border: 1px solid #fbd34b;
   font-style: normal;
   font-size: 12px;
   line-height: 26px;
@@ -337,6 +338,39 @@
   z-index: 20;
   width: 200px;
   height: 300px;
+}
+
+/*换一换按钮*/
+.changeList {
+  position: absolute;
+  left: 50%;
+  bottom: 8rem;
+  display: block;
+  border-style: none;
+  outline: none;
+  transform: translateX(-50%);
+}
+
+.seeMore {
+  width: 20rem;
+  height: 3rem;
+  background-color: #0d172e;
+  border: 2px solid #3a5977;
+  border-radius: 3rem;
+  font: 14px/2rem "Microsoft Yahei";
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.seeMore:hover {
+  border-color: #fbd34b;
+  background-color: rgba(251, 211, 77, 1);
+  color: #000;
 }
 
 
@@ -798,7 +832,7 @@ footer p {
 .detailCover {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 100%;
   z-index: 9999;
   width: 100%;
   height: 100%;
