--- a/admin/css/admin-style.css
+++ b/admin/css/admin-style.css
@@ -2,24 +2,56 @@
 
 /*CSS document*/
 
-body {
-  min-width: 1000px;
-  padding-top: 70px;
-  font-family: Arial, "Microsoft Yahei";
+.ml20 {
+  margin-left: 20px;
 }
 
-/*.lp-admin .navbar {
-  background-color: #3c8dbc;
+legend {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.lp-admin .navbar li a,
-.lp-admin .navbar li a:hover,
-.lp-admin .navbar-brand,
-.lp-admin .navbar-brand:hover,
-.lp-admin .navbar p {
-  color: #fff;
+.glpx-dropselect {
+  margin-bottom: 20px;
 }
 
-.lp-admin .navbar li a:hover {
-  background-color: #357ca5;
+.file {
+  visibility: hidden;
+}
+
+#glpx,#fbpx,#xgpx {
+  padding-bottom: 90px;
+}
+
+/*多选框样式*/
+
+input[type="checkbox"].checkboxStyle  {
+  margin-top: 6px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+/*.checkboxLabel:after {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  display: block;
+  content: "";
+  width: 14px;
+  height: 8px;
+  background-color: transparent;
+  border: 3px solid transparent;
+  border-left-color: #ccc;
+  border-bottom-color: #ccc;
+  transform: rotate(-45deg);
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked + label.checkboxLabel:after {
+  opacity: 1;
+}
+
+.checkboxHidden {
+  visibility: hidden;
 }*/
