--- a/css/index.css
+++ b/css/index.css
@@ -385,11 +385,12 @@ header .logo {
   top: 5%;
   left: 5%;
   z-index: 999;
-  width: 9rem;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  width: 5rem;
+  -webkit-transform: translateY(-20%);
+  -moz-transform: translateY(-20%);
+  -ms-transform: translateY(-20%);
+  -o-transform: translateY(-20%);
+  transform: translateY(-20%);
 }
 
 header nav {
