--- a/css/place.css
+++ b/css/place.css
@@ -41,7 +41,12 @@
 }
 
 .topBox header .logo {
-  width: 9rem;
+  width: 5rem;
+  -webkit-transform: translateY(-20%);
+  -moz-transform: translateY(-20%);
+  -ms-transform: translateY(-20%);
+  -o-transform: translateY(-20%);
+  transform: translateY(-20%);
 }
 
 .topBox header nav {
@@ -1956,6 +1961,12 @@ footer .info .info-nr p {
   font-size: 16px;
   line-height: 2.5;
   color: #fff;
+}
+
+.about-container .friends ul li {
+  float: left;
+  margin: 10px;
+
 }
 
 @media only screen and (max-width: 1441px) {
