--- a/css/index.css
+++ b/css/index.css
@@ -963,7 +963,7 @@ header .responsiveNav-list ul li img {
 
 /*首页头部适配*/
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 490px) {
   header .responsiveNav-list {
     display: none;
   }
@@ -1312,7 +1312,7 @@ footer p {
   position: fixed;
   top: 0;
   left: 100%;
-  z-index: 9999;
+  z-index: 9999999;
   width: 100%;
   height: 100%;
   background-color: rgba(1, 8, 24, .9);
