--- a/css/normalize.css
+++ b/css/normalize.css
@@ -25,7 +25,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 }
 
 body {
-  min-width: 600px;
+  /*min-width: 600px;*/
   background-color: #010818;
   overflow-x: hidden;
 }
