--- a/css/index.css
+++ b/css/index.css
@@ -197,11 +197,19 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 1130px;
+  max-width: 1130px;
+  min-width: 230px;
+  height: 306px;
+  overflow: hidden;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.fullpage-ad .photoList> ul {
+  height: 306px;
+  overflow: hidden;
 }
 
 .fullpage-ad .photoList> ul> li {
@@ -369,6 +377,11 @@
   color: #000;
 }
 
+@media only screen and (max-width: 1140px) {
+  .changeList {
+    bottom: 6rem;
+  }
+}
 
 /*
 =============
@@ -1309,6 +1322,7 @@ footer p {
 */
 
 .detailCover {
+  display: none;
   position: fixed;
   top: 0;
   left: 100%;
