--- a/css/place.css
+++ b/css/place.css
@@ -1895,14 +1895,8 @@ footer .info .info-nr p {
 
 .detailCover .detailContent .comWidth {
   width: 93%;
-  /*width: 1400px;*/
+  max-width: 1100px;
   margin: 0 auto;
-}
-
-@media only screen and (max-width: 1441px) {
-  .detailCover .detailContent .comWidth {
-    /*width: 1100px;*/
-  }
 }
 
 .detailCover .detailContent h2 {
@@ -1926,8 +1920,27 @@ footer .info .info-nr p {
 .picSlideBox {
   position: relative;
   width: 100%;
+  max-width: 1100px;
   height: 470px;
   overflow: hidden;
+}
+
+@media only screen and (max-width: 1200px) {
+  .picSlideBox {
+    height: 400px;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .picSlideBox {
+    height: 285px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .picSlideBox {
+    height: 135px;
+  }
 }
 
 .picSlideBox .picSlideBig {
@@ -1941,13 +1954,15 @@ footer .info .info-nr p {
 
 .picSlideBox .picSlideBig li {
   float: left;
+  max-width: 1100px;
   height: auto;
   overflow: hidden;
 }
 
 .picSlideBox .picSlideBig li img {
+  max-width: 1100px;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .picSlideBox .picSlideSmallBox {
@@ -1994,6 +2009,10 @@ footer .info .info-nr p {
 
 
 /*详细信息介绍*/
+
+.detailInfo {
+  max-width: 1100px;
+}
 
 .detailInfo h3 {
   font-size: 16px;
@@ -2322,11 +2341,18 @@ footer .info .info-nr p {
   }
 }
 
+@media only screen and (max-width: 770px) {
+  .topBox .aboutTop-leftSlogan,
+  .topBox .aboutTop-rightSlogan {
+    display: none;
+  }
+}
+
 
 /*关于我们*/
 
 .about-container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 5rem auto;
 }
 
@@ -2465,7 +2491,7 @@ footer .info .info-nr p {
 .contactus-info .contactus-info-text .contactus-info-text-left p span {
   position: absolute;
   top: 11px;
-  right: -40px;
+  right: -50%;
   display: inline-block;
   width: 2px;
   height: 15px;
@@ -2491,7 +2517,8 @@ footer .info .info-nr p {
 
 @media only screen and (max-width: 1441px) {
   .about-container {
-    width: 1000px;
+    max-width: 1000px;
+    width: 90%;
   }
   .about-container section h2 {
     font-size: 2.8rem;
@@ -2504,10 +2531,13 @@ footer .info .info-nr p {
     height: 32rem;
   }
   .about-container .aboutus img {
-    width: 47.95rem;
+    width: 57%;
+    max-width: 47.95rem;
   }
   .about-container .aboutus .aboutus-info {
-    width: 45rem;
+    width: 54%;
+    max-width: 45rem;
+    /*height: 90%;*/
     height: 33rem;
   }
   .about-container .contactus img {
@@ -2517,7 +2547,86 @@ footer .info .info-nr p {
     height: 25rem;
   }
   .about-container .friends ul li {
-    margin: 10px;
+    width: 18%;
+    margin: 1%;
+  }
+  .about-container .friends ul li img {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 770px) {
+  .about-container .aboutus .aboutus-content {
+    height: 42rem;
+  }
+  .about-container .aboutus img {
+    width: 80%;
+  }
+  .about-container .aboutus .aboutus-info {
+    width: 80%;
+    height: 45rem;
+  }
+  .aboutus-info .aboutus-info-text {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    width: 80%;
+  }
+  .aboutus-info .aboutus-info-text p.s2 {
+    display: none;
+  }
+  .about-container .contactus .contactus-info {
+    width: 70%;
+  }
+  .about-container .contactus img {
+    width: 30%;
+  }
+  .about-container .friends ul li {
+    width: 48%;
+    margin: 1%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .about-container section {
+    margin-bottom: 6rem;
+  }
+  .about-container .aboutus img {
+    width: 90%;
+  }
+  .about-container .aboutus .aboutus-info {
+    width: 90%;
+    height: 40rem;
+  }
+  .aboutus-info .aboutus-info-text {
+    top: 45%;
+  }
+  .aboutus-info .aboutus-info-text h3 {
+    display: none;
+  }
+    .about-container .contactus .contactus-info {
+    width: 100%;
+  }
+  .about-container .contactus img {
+    display: none;
+  }
+  .about-container .contactus .contactus-info {
+    margin-top: 0;
+  }
+  .contactus-info .contactus-info-text .contactus-info-text-right {
+    width: 70%;
+  }
+  .contactus-info .contactus-info-text {
+    width: 90%;
+  }
+  .contactus-info .contactus-info-text .contactus-info-text-left {
+    width: 15%;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .aboutus-info .aboutus-info-text {
+    top: 40%;
   }
 }
 
