--- a/css/index.css
+++ b/css/index.css
@@ -1361,8 +1361,8 @@ footer p {
   /*transform: translate(-50%, -50%);*/
   /*min-width: 200px;*/
   /*height: auto;*/
-  max-width: 1200px;
-  max-height: 500px;
+  /*max-width: 1200px;*/
+  /*max-height: 500px;*/
 }
 
 .picSlideBox .picSlideBig li {
@@ -1374,12 +1374,14 @@ footer p {
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  /*max-width: 1200px;*/
-  /*max-height: 500px;*/
+  max-width: 1200px;
+  max-height: 506px;
 }
 
 .picSlideBox .picSlideBig li img {
+  max-width: 100%;
   width: auto;
+  height: auto;
   max-height: 500px;
   border: 6px solid #fbd34b;
 }
@@ -1434,6 +1436,12 @@ footer p {
   background-color: #fbd34b;
 }
 
+@media only screen and (max-width: 480px) {
+  .picSlideBox .picSlideBig li img {
+    max-height: 400px;
+    border-width: 3px;
+  }
+}
 
 /*关闭按钮*/
 
