--- a/css/place.css
+++ b/css/place.css
@@ -1013,6 +1013,8 @@
     left: 50%;
     right: 0;
     -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
   }
 }
@@ -2064,6 +2066,9 @@ footer .info .info-nr p {
   width: 2px;
   height: 20px;
   background-color: #fbd34b;
+  -webkit-transform-origin: center 11px;
+  -moz-transform-origin: center 11px;
+  -ms-transform-origin: center 11px;
   transform-origin: center 11px;
 }
 
@@ -2072,6 +2077,7 @@ footer .info .info-nr p {
   top: 2px;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
@@ -2080,6 +2086,7 @@ footer .info .info-nr p {
   top: 2px;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
@@ -2095,16 +2102,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   50% {
     -webkit-transform: rotate(80deg);
     -moz-transform: rotate(80deg);
+    -ms-transform: rotate(80deg);
     transform: rotate(80deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 }
@@ -2113,16 +2123,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   50% {
     -webkit-transform: rotate(80deg);
     -moz-transform: rotate(80deg);
+    -ms-transform: rotate(80deg);
     transform: rotate(80deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 }
@@ -2131,16 +2144,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   50% {
     -webkit-transform: rotate(80deg);
     -moz-transform: rotate(80deg);
+    -ms-transform: rotate(80deg);
     transform: rotate(80deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 }
@@ -2149,16 +2165,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
   50% {
     -webkit-transform: rotate(80deg);
     -moz-transform: rotate(80deg);
+    -ms-transform: rotate(80deg);
     transform: rotate(80deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 }
@@ -2167,16 +2186,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
   50% {
     -webkit-transform: rotate(-80deg);
     -moz-transform: rotate(-80deg);
+    -ms-transform: rotate(-80deg);
     transform: rotate(-80deg);
   }
   100% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 }
@@ -2185,16 +2207,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
   50% {
     -webkit-transform: rotate(-80deg);
     -moz-transform: rotate(-80deg);
+    -ms-transform: rotate(-80deg);
     transform: rotate(-80deg);
   }
   100% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 }
@@ -2203,16 +2228,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
   50% {
     -webkit-transform: rotate(-80deg);
     -moz-transform: rotate(-80deg);
+    -ms-transform: rotate(-80deg);
     transform: rotate(-80deg);
   }
   100% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 }
@@ -2221,16 +2249,19 @@ footer .info .info-nr p {
   0% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
   50% {
     -webkit-transform: rotate(-80deg);
     -moz-transform: rotate(-80deg);
+    -ms-transform: rotate(-80deg);
     transform: rotate(-80deg);
   }
   100% {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 }
