--- a/css/index.css
+++ b/css/index.css
@@ -207,12 +207,12 @@
   transform: translate(-50%, -50%);
 }
 
-.fullpage-ad .photoList> ul {
+.fullpage-ad .photoList>ul {
   height: 306px;
   overflow: hidden;
 }
 
-.fullpage-ad .photoList> ul> li {
+.fullpage-ad .photoList>ul>li {
   position: relative;
   z-index: 0;
   float: left;
@@ -221,18 +221,64 @@
   margin: 0 10px;
   background-color: #3a5977;
   border: 3px solid #3a5977;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .7);
   cursor: pointer;
-  -webkit-transition: all .4s ease-in-out;
-  -moz-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  opacity: 0;
 }
 
-.fullpage-ad .photoList> ul> li:hover {
+.fullpage-ad .photoList>ul>li.ani-1 {
+  -webkit-animation: flyRightAnimate .5s ease-in-out 1 forwards;
+  -moz-animation: flyRightAnimate .5s ease-in-out 1 forwards;
+  animation: flyRightAnimate .5s ease-in-out 1 forwards;
+}
+
+.fullpage-ad .photoList>ul>li.ani-2 {
+  -webkit-animation: flyRightAnimate .5s ease-in-out .05s 1 forwards;
+  -moz-animation: flyRightAnimate .5s ease-in-out .05s 1 forwards;
+  animation: flyRightAnimate .5s ease-in-out .05s 1 forwards;
+}
+
+.fullpage-ad .photoList>ul>li.ani-3 {
+  -webkit-animation: flyRightAnimate .5s ease-in-out .1s 1 forwards;
+  -moz-animation: flyRightAnimate .5s ease-in-out .1s 1 forwards;
+  animation: flyRightAnimate .5s ease-in-out .1s 1 forwards;
+}
+
+.fullpage-ad .photoList>ul>li.ani-4 {
+  -webkit-animation: flyRightAnimate .5s ease-in-out .15s 1 forwards;
+  -moz-animation: flyRightAnimate .5s ease-in-out .15s 1 forwards;
+  animation: flyRightAnimate .5s ease-in-out .15s 1 forwards;
+}
+
+.fullpage-ad .photoList>ul>li.ani-5 {
+  -webkit-animation: flyRightAnimate .5s ease-in-out .2s 1 forwards;
+  -moz-animation: flyRightAnimate .5s ease-in-out .2s 1 forwards;
+  animation: flyRightAnimate .5s ease-in-out .2s 1 forwards;
+}
+
+.fullpage-ad .photoList>ul>li:hover {
   box-shadow: 0 0 10px rgba(255, 211, 75, .7)
 }
 
-.fullpage-ad .photoList> ul> li span {
+.fullpage-ad .photoList>ul>li i.photostyle {
+  position: absolute;
+  z-index: 20;
+  width: 200px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.fullpage-ad .photoList>ul>li img {
+  /*max-width: 200px;*/
+  height: 300px;
+  width: auto;
+  /*height: auto;*/
+}
+
+.fullpage-ad .photoList>ul>li span {
   display: none;
   position: absolute;
   bottom: 0;
@@ -248,7 +294,7 @@
   text-align: center;
 }
 
-.fullpage-ad .photoList> ul> li span em {
+.fullpage-ad .photoList>ul>li span em {
   display: block;
   width: 100px;
   height: 26px;
@@ -260,7 +306,7 @@
   text-align: center;
 }
 
-.fullpage-ad .photoList> ul> li i {
+.fullpage-ad .photoList>ul>li i.line {
   position: absolute;
   display: block;
   width: 206px;
@@ -269,16 +315,16 @@
   opacity: 0;
 }
 
-.fullpage-ad .photoList> ul> li i.topLine {
+.fullpage-ad .photoList>ul>li i.topLine {
   top: -3px;
   left: -3px;
 }
 
-.fullpage-ad .photoList> ul> li:hover i.topLine {
-  -webkit-animation: drawtopLine .4s ease 1 forwards;
-  -moz-animation: drawtopLine .4s ease 1 forwards;
-  -ms-animation: drawtopLine .4s ease 1 forwards;
-  animation: drawtopLine .4s ease 1 forwards;
+.fullpage-ad .photoList>ul>li:hover i.topLine {
+  -webkit-animation: drawtopLine .5s ease 1 forwards;
+  -moz-animation: drawtopLine .5s ease 1 forwards;
+  -ms-animation: drawtopLine .5s ease 1 forwards;
+  animation: drawtopLine .5s ease 1 forwards;
 }
 
 @-webkit-keyframes drawtopLine {
@@ -333,12 +379,13 @@
   }
 }
 
-.fullpage-ad .photoList> ul> li img {
+
+/*.fullpage-ad .photoList> ul> li img {
   position: absolute;
   z-index: 20;
   width: 200px;
   height: 300px;
-}
+}*/
 
 
 /*换一换按钮*/
@@ -382,6 +429,7 @@
     bottom: 6rem;
   }
 }
+
 
 /*
 =============
@@ -1436,12 +1484,19 @@ footer p {
   background-color: #fbd34b;
 }
 
+@media only screen and (max-width: 1040px) {
+  .picSlideBox .picSlideBig li img {
+    max-height: 37.5rem;
+  }
+}
+
 @media only screen and (max-width: 480px) {
   .picSlideBox .picSlideBig li img {
-    max-height: 400px;
+    max-height: 33rem;
     border-width: 3px;
   }
 }
+
 
 /*关闭按钮*/
 
@@ -1659,5 +1714,78 @@ footer p {
     -moz-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
+  }
+}
+
+
+/*右飞入*/
+
+
+/*@-webkit-keyframes flyRightAnimate {
+  0% {
+    -webkit-transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes flyRightAnimate {
+  0% {
+    -webkit-transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes flyRightAnimate {
+  0% {
+    -webkit-transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}*/
+
+@keyframes flyRightAnimate {
+  0% {
+    -webkit-transform: translateY(-100px) translateX(-50px);
+    -moz-transform: translateY(-100px) translateX(-50px);
+    -ms-transform: translateY(-100px) translateX(-50px);
+    transform: translateY(-100px) translateX(-50px);
+    opacity: 0;
+  }
+ 
+  100% {
+    -webkit-transform: translateY(0) translateX(0);
+    -moz-transform: translateY(0) translateX(0);
+    -ms-transform: translateY(0) translateX(0);
+    transform: translateY(0) translateX(0);
+    opacity: 1;
   }
 }
