--- a/admin/css/admin-style.css
+++ b/admin/css/admin-style.css
@@ -6,6 +6,14 @@
   margin-left: 20px;
 }
 
+.ml10 {
+  margin-left: 10px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
 legend {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -15,9 +23,9 @@ legend {
   margin-bottom: 20px;
 }
 
-.file {
+/*.file {
   visibility: hidden;
-}
+}*/
 
 #glpx,#fbpx,#xgpx {
   padding-bottom: 90px;
