--- a/css/place.css
+++ b/css/place.css
@@ -1565,6 +1565,8 @@ footer .info .info-nr p {
   margin-top: 5px;
   background-color: #fbd34b;
   border-radius: 4px 0 0 3px;
+  line-height: 4rem;
+  font-size: 14px;
   text-align: center;
   cursor: pointer;
   -webkit-transition: all .2s ease-in-out;
@@ -1575,7 +1577,7 @@ footer .info .info-nr p {
 .stick li a {
   line-height: 4rem;
   font-size: 14px;
-  color: #fff;
+  color: #00233d;
   text-decoration: none;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -1585,14 +1587,13 @@ footer .info .info-nr p {
 .stick .wechat {
   padding: 40px 0 10px;
   background-image: url(../img/nav-icon.png);
-  background-position: 10px 11px;
+  background-position: -102px 11px;
   background-repeat: no-repeat;
   line-height: 1.3;
-  color: #fff;
+  color: #00233d;
 }
 
 .stick .wechat:hover {
-  background-position: -102px 11px;
   color: #00233d;
 }
 
@@ -2729,5 +2730,57 @@ footer .info .info-nr p {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     opacity: 1;
+  }
+}
+
+
+/*数据拉取等待动画*/
+.loading {
+  height: 30px;
+  width: 50px;
+  padding: 35px 0;
+  margin: 0 auto;
+  font-size: 0;
+  display: none;
+}
+
+.loading .rect {
+  display: inline-block;
+  width: 6px;
+  height: 15px;
+  margin: 0 2px;
+  background-color: #fbd34b;
+  animation: loading 1.2s infinite ease-in-out;
+}
+
+.loading .rect1 {
+  animation-delay: .1s;
+}
+
+.loading .rect2 {
+  animation-delay: .2s;
+}
+
+.loading .rect3 {
+  animation-delay: .3s;
+}
+
+.loading .rect4 {
+  animation-delay: .4s;
+}
+
+.loading .rect5 {
+  animation-delay: .5s;
+}
+
+@keyframes loading {
+  0% {
+    transform: scaleY(1);
+  }
+  20% {
+    transform: scaleY(3);
+  }
+  40% {
+    transform: scaleY(1);
   }
 }
