--- a/admin/css/admin-style.css
+++ b/admin/css/admin-style.css
@@ -31,11 +31,14 @@ legend {
   margin-bottom: 20px;
 }
 
+
 /*.file {
   visibility: hidden;
 }*/
 
-#glpx,#fbpx,#xgpx {
+#glpx,
+#fbpx,
+#xgpx {
   padding-bottom: 90px;
 }
 
@@ -44,16 +47,18 @@ legend {
   margin-top: 40px;
 }
 
+
 /*多选框样式*/
 
-input[type="checkbox"].checkboxStyle  {
+input[type="checkbox"].checkboxStyle {
   margin-top: 6px;
   width: 20px;
   height: 20px;
   cursor: pointer;
 }
 
-.imgPreview td {
+
+/*.imgPreview td {
   position: relative !important;
 }
 
@@ -73,9 +78,75 @@ input[type="checkbox"].checkboxStyle  {
 
 .imgPreview td:hover button {
   display: block;
-}
+}*/
 
 #xgzpTab a,
 #xgpxTab a {
   cursor: default;
+}
+
+.imgPreview li {
+  position: relative !important;
+  display: inline-block;
+  height: 200px;
+}
+
+.imgPreview li img {
+  width: 100%;
+  height: auto;
+  max-height: 150px;
+  max-width: 250px;
+}
+
+.imgPreview li button {
+  display: none;
+  position: absolute;
+  top: 5px;
+  left: 20px;
+}
+
+.imgPreview li:hover button {
+  display: block;
+}
+
+#fbzpBtn {
+  position: relative !important;
+  height: 46px;
+}
+
+.sendLoading {
+  position: absolute;
+  top: 28%;
+  left: 49%;
+  -webkit-transform-origin: center;
+  transform-origin: center;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: sendLoading 1s infinite ease-in-out;
+}
+
+@keyframes sendLoading {
+  0% {
+    /*transform-origin: center;*/
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    transform: rotate(0deg);
+  }
+  80% {
+    /*transform-origin: center;*/
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    transform: rotate(350deg);
+  }
+  100% {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    /*transform-origin: center;*/
+    transform: rotate(360deg);
+  }
 }
