--- a/css/place.css
+++ b/css/place.css
@@ -774,10 +774,13 @@
   float: left;
   width: 45.6rem;
   height: 28.25rem;
+  overflow: hidden;
 }
 
 .daily .daily-left .dailyPic ul li img {
-  width: 45.6rem;
+  width: auto;
+  height: 100%;
+  min-width: 100%;
 }
 
 .daily .daily-left .daily-slideBtn {
@@ -1291,11 +1294,13 @@
 .typeList .colList .product .productPic {
   width: 55.5%;
   height: 100%;
+  overflow: hidden;
 }
 
 .typeList .colList .product img {
-  width: 100%;
+  width: auto;
   height: 100%;
+  min-width: 100%;
 }
 
 .typeList .colList .product .product-content-bg {
@@ -1370,9 +1375,6 @@
     width: 55.5%;
     height: 100%;
   }
-  .typeList .colList .product img {
-    width: 100%;
-  }
   .typeList .colList .product .product-content h3 {
     margin-bottom: 10px;
     line-height: 2;
@@ -1385,7 +1387,6 @@
     min-width: 1rem;
   }
   .typeList .colList {
-    /*width: 70rem;*/
     margin: 0 auto;
     width: 100%;
     min-width: 1rem;
@@ -1431,9 +1432,6 @@
     width: 100%;
     height: 20rem;
   }
-  .typeList .colList .product img {
-    width: 100%;
-  }
 }
 
 @media only screen and (max-width: 370px) {
@@ -1446,9 +1444,6 @@
     height: 20rem;
   }
   .typeList .colList .product .productPic-info {
-    width: 100%;
-  }
-  .typeList .colList .product img {
     width: 100%;
   }
 }
