--- a/css/place.css
+++ b/css/place.css
@@ -863,15 +863,15 @@
   left: 0;
   height: 9.2rem;
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1.4;
   color: #fff;
-  overflow: hidden;
+  /*overflow: hidden;*/
   text-align: justify;
 }
 
 .daily .daily-right .dailyDetailBtn {
   position: absolute;
-  top: 80%;
+  top: 85%;
   left: 0;
 }
 
@@ -1333,7 +1333,8 @@
 
 .typeList .colList .product .product-content p {
   height: 70%;
-  line-height: 1.2;
+  font-size: 14px;
+  line-height: 1.4;
   color: #fff;
   text-align: justify;
   overflow: hidden;
@@ -1381,7 +1382,7 @@
   .typeList .colList .product .product-content h3 {
     margin-bottom: 10px;
     line-height: 2;
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
